[gd_scene load_steps=3 format=2]

[ext_resource path="res://Textures/cross-mark.png" type="Texture" id=1]
[ext_resource path="res://Scripts/HealthUI.gd" type="Script" id=2]

[node name="Healthbar UI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="HPImage1" type="TextureRect" parent="."]
modulate = Color( 1, 0, 0, 1 )
anchor_left = 1.0
anchor_right = 1.0
margin_left = -296.0
margin_top = -216.0
margin_right = 216.0
margin_bottom = 296.0
rect_scale = Vector2( 0.15, 0.15 )
rect_pivot_offset = Vector2( 256, 256 )
texture = ExtResource( 1 )

[node name="HPImage2" type="TextureRect" parent="."]
modulate = Color( 1, 0, 0, 1 )
anchor_left = 1.0
anchor_right = 1.0
margin_left = -383.0
margin_top = -216.0
margin_right = 129.0
margin_bottom = 296.0
rect_scale = Vector2( 0.15, 0.15 )
rect_pivot_offset = Vector2( 256, 256 )
texture = ExtResource( 1 )

[node name="HPImage3" type="TextureRect" parent="."]
modulate = Color( 1, 0, 0, 1 )
anchor_left = 1.0
anchor_right = 1.0
margin_left = -466.0
margin_top = -216.0
margin_right = 46.0
margin_bottom = 296.0
rect_scale = Vector2( 0.15, 0.15 )
rect_pivot_offset = Vector2( 256, 256 )
texture = ExtResource( 1 )
